opam-version: "2.0"
synopsis: "Virtual package for system installation of liburing"
maintainer: ["Lee Koon Wen"]
authors: ["Lee Koon Wen"]
license: ["ISC" "BSD-3-Clause"]
homepage: "https://github.com/koonwen/uring-trace"
doc: "https://koonwen.github.com/koonwen/uring-trace"
bug-reports: "https://github.com/koonwen/uring-trace/issues"
available: [ os = "linux" ]

depexts: [
  ["liburing-dev"]   { os-distribution = "ubuntu" }
  ["liburing-dev"]   { os-distribution = "debian" }
  ["liburing-devel"] { os-distribution = "fedora" }
]
flags: conf
