(library
 (name site)
 (libraries dune-site)
 (modules site bpf))

(rule
 (deps
  (source_tree %{project_root}/bpf)
  (source_tree %{project_root}/vmlinux))
 (target uring-trace.bpf.o)
 (action
  (no-infer
   (progn
    (chdir
     %{project_root}/bpf
     (run make))
    (copy %{project_root}/bpf/output/uring.bpf.o %{target})))))

(install
 (package uring-trace)
 (section
  (site
   (uring-trace bpf)))
 (files
  (uring-trace.bpf.o as uring-trace.bpf.o)))

(generate_sites_module
 (module bpf)
 (sites uring-trace))
